The endpoint to delete a user is now DELETE /user/{login}. It has been moved in an new "administration" tag. Only ADMIN accounts can use it. Tests improved.
